<resources>
    <string name="app_name">GOM</string>
    <string name="greenhouse_online_market">GREENHOUSE ONLINE MARKET</string>
    <string name="enter_email">Enter Email</string>
    <string name="enter_password">Enter Password</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="signup">SignUp</string>
    <string name="submit">Submit</string>
    <string name="farmer">Farmer</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="username">UserName</string>
    <string name="email">Email</string>
    <string name="location">Location</string>
    <string name="phone_number">Phone Number</string>
    <string name="name">Name</string>
    <string name="product_name">Product Name</string>
    <string name="upload_product_information">Upload Product Information</string>
    <string name="product_amount">Product Amount</string>
    <string name="product_price">Product Price</string>
    <string name="product_duration">Product Duration</string>
    <string name="upload">upload</string>
    <string name="view">View</string>
    <string name="title_shop">Shop</string>
    <string name="title_cart">Cart</string>
    <string name="title_profile">Profile</string>
    <string name="action_settings">Settings</string>
    <string name="action_add_favourite">Add to Favourites</string>
    <string name="action_play_next">Play Next</string>
    <string name="backdrop_title">LOVE MUSIC</string>
    <string name="backdrop_subtitle">This season top 20 albums</string>
    <string name="prouct_information">Prouct information</string>
    <string name="farmer_information">Farmer information</string>
    <string name="order_product">Order Product</string>


</resources>
