<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >
        <TextView
            android:id="@+id/Title_e"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/prouct_information"
            android:textColor="#000"
            android:textSize="30sp" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5sp"
            android:layout_marginTop="10sp"
            android:src="@drawable/ab" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/ImageNameTextVie"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="JSon Image Name"
                android:textColor="#000"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/ImageNameTextView_c"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="JSon Image Name"
                android:textColor="#000"
                android:textSize="20sp" />


            <TextView
                android:id="@+id/ImageNameTextView_b"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="JSon Image Name"
                android:textColor="#000"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/ImageNameTextView_a"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="0dp"
                android:gravity="center"
                android:text="JSon Image Name"
                android:textColor="#000"
                android:textSize="20sp" />

        </LinearLayout>


        <TextView
            android:id="@+id/Title_a"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/farmer_information"
            android:textColor="#000"
            android:textSize="30sp" />



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_marginTop="20dp">

            <TextView
                android:id="@+id/ImageNameTextVie_e"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="Mollel Ayubu"
                android:textColor="#000"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/ImageNameTextView_f"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="Tanga"
                android:textColor="#000"
                android:textSize="20sp" />


            <TextView
                android:id="@+id/ImageNameTextView_"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="0765438924"
                android:textColor="#000"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/ImageNameTextView_h"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="0dp"
                android:gravity="center"
                android:text="mollel@gmail.com"
                android:textColor="#000"
                android:textSize="20sp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/order_product"
            android:layout_marginTop="10sp"
            android:textSize="20sp"
            />
        </LinearLayout>
    </LinearLayout>



</android.support.v7.widget.CardView>